add notification-service